section whitespace fix.

--- a/src/postcss/modules/utilities.css
+++ b/src/postcss/modules/utilities.css
@@ -92,7 +92,7 @@ h1 {
 }
 
 section {
-  padding: 30px 0;
+  padding: 30px 0 60px 0;
 }
 
 section.p-t-0 {
